--- a/triangle-1.html
+++ b/triangle-1.html
@@ -104,9 +104,9 @@
       }, 1000); // 1秒後にアニメーション開始
 
       // 2.5秒後にロゴをフェードイン
-      setTimeout(() => {
-        container.querySelector('.logo').style.opacity = 1; // フェードイン
-      }, 4000); // 2.5秒後にロゴを表示
+      //setTimeout(() => {
+      //  container.querySelector('.logo').style.opacity = 1; // フェードイン
+      //}, 4000); // 2.5秒後にロゴを表示
     };
   </script>
 </body>
