--- a/animation-2/index.html
+++ b/animation-2/index.html
@@ -47,6 +47,7 @@
         </video>
 
         <!-- 透過PNG画像のオーバーレイ -->
-            </div>
+        <img class="overlay" src="./image.png" alt="Overlay Image">
+    </div>
 </body>
 </html>
