--- a/fplus_html/index.html
+++ b/fplus_html/index.html
@@ -92,10 +92,12 @@
 	</div>
 </header>
 <section id="loading" class="loading">
-    <video src="./img/loading__animation.mp4" autoplay muted class="bg__animation" playsinline></video>
+    <video src="./img/loading__animation.mp4" autoplay muted playsinline class="bg__animation" data-target="loading"></video>
+    <img src="./img/mv__img.png" alt=" " class="bg__img fadeup loading__fadeup">
 </section>
 <section id="bg" class="bg">
-    <video src="./img/mv__animation.mp4" autoplay muted loop class="bg__animation" playsinline></video>
+    <video src="./img/mv__animation.mp4" autoplay muted loop playsinline class="bg__animation" data-target="background"></video>
+    <img src="./img/mv__img.png" alt=" " class="bg__img">
 </section>
 <section id="mv" class="mv">
     <h2 class="catch">
