--- a/fplus_html/index.html
+++ b/fplus_html/index.html
@@ -114,9 +114,11 @@
             <span class="catch--ja">次世代のクリエイティブを、<br class="sp__only">テクノロジーで形にする</span>
         </div>
     </h2>
+	<!--
     <a class="mv__news fadeup" href="#">
         <div class="mv__news__date">2025.04.08</div>
         <div class="mv__news__title">ゴールデンウィーク休業のお知らせ</div>
+	-->
     </a>
     <div class="scroll fadeup">
         <div class="spinner"></div>
@@ -141,8 +143,7 @@
                 <div class="title__ja">私たちが<br class="pc__only">目指すもの</div>
             </h3>
             <p class="mission__text fade-in">
-                文字の大きさ、量、字間、行間等を確認するために入れています。
-                この文章はダミーです。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。
+                次世代のクリエイティブを、テクノロジーの力で形にしたい。そんな思いを実現するため、私たちは3つの+Fをビジョンとして掲げています。
             </p>
         </div>
         <div class="mission__container--right fade-in">
@@ -171,8 +172,8 @@
                 <p class="service__name__ja">アプリケーション開発</p>
             </h4>
             <p class="service__text">
-                お客様のニーズに応じたカスタムアプリケーションを迅速に自社開発します。
-                さらに、コンサルティングサービスと組み合わせることで、現場の課題に最適化されたソリューションを実現。課題の発見から開発まで、ワンストップで対応します。
+                お客様の課題や要望をを汲み取り、最先端のアプリケーションを自社開発します。
+                現場の課題に最適化されたソリューションを実現し、課題の発見から開発まで、ワンストップで出来るのが弊社の強みです。
             </p>
             <div class="btn__more fade-in">
                 <div class="btn__more__circle"></div>
@@ -196,9 +197,9 @@
                 <p class="service__name__ja">データ分析 & AI</p>
             </h4>
             <p class="service__text">
-                業界特有のデータを活用し、業績向上や業務効率化を実現するための分析を行います。
+                データ分析とAIの活用で、売上分析や業務効率化をサポートします。
+		企業の現場ニーズに寄り添い、テクノロジーが役立ちそうな課題を見つけ、継続的な成果につながる提案を行います。
                 ChatGPTをはじめとするAIツールの導入支援や、各企業に最適化したAIの開発・実装も対応可能です。
-                データ活用とAIの力を最大限に引き出し、課題解決をサポートします。企業の現場ニーズに寄り添い、継続的な成果につながる提案を行います。
             </p>
             <div class="btn__more fade-in">
                 <div class="btn__more__circle"></div>
@@ -240,8 +241,8 @@
         <li class="product__item fade-in">
             <img src="./img/product1.png" alt="アプリケーションモックアップ画像" class="product__img">
             <p class="product__description">
-                ECサイトから取得した売上データを一元管理し、売上予測や在庫補充の必要性を分析します。
-                効率的な在庫管理をサポートし、販売戦略の最適化を実現するWebアプリケーションです。
+                ZOZOTOWNから取得した売上データを分析し、売上予測や在庫補充管理を行います。
+                販売戦略の最適化を実現するWebアプリケーションです。
             </p>
             <!-- <button class="btn__viewall btn__product btn fade-in" type="button" onclick="location.href='#'">
                 <span class="btn__text">すべて見る</span>
@@ -264,8 +265,8 @@
         <li class="product__item fade-in">
             <img src="./img/product2.png" alt="アプリケーションモックアップ画像" class="product__img">
             <p class="product__description">
-                アパレルの生産工程をシステム化し、各工程の進捗や状況をリアルタイムで可視化・管理します。
-                生産計画の精度向上や効率化を支援し、現場の負担軽減に貢献するアプリケーションです。
+                アパレルの生産工程をシステム化し、各工程の進捗や状況を可視化・管理します。
+                アナログなやり取りをシステム化することで、現場の負担軽減に貢献するアプリケーションです。
             </p>
             <!-- <button class="btn__viewall btn__product btn fade-in" type="button" onclick="location.href='#'">
                 <span class="btn__text">すべて見る</span>
@@ -302,6 +303,35 @@
             <li class="category__item">お知らせ</li>
         </ul>
     </div>
+    <ul class="news__list">
+	<li class="news__item fade-in">
+            <div class="sp__news__header">
+                <p class="news__date">2024.12.26</p>
+                <p class="news__item__category sp__only">お知らせ</p>
+            </div>
+            <div class="news__contetnt">
+                <p class="news__item__category pc__only">お知らせ</p>
+                <h5 class="news__item__title">年末年始休業のお知らせ</h5>
+                <p class="news__text">
+                    12/27〜1/5までは年末年始休業となります。予めご了承ください。
+                </p>
+            </div>
+        </li>
+        <li class="news__item fade-in">
+            <div class="sp__news__header">
+                <p class="news__date">2024.12.26</p>
+                <p class="news__item__category sp__only">お知らせ</p>
+            </div>
+            <div class="news__contetnt">
+                <p class="news__item__category pc__only">お知らせ</p>
+                <h5 class="news__item__title">コーポレートサイトをオープンしました。</h5>
+                <p class="news__text">
+                    コーポレートサイトをオープンしました。以降、お知らせがあれば掲載いたします。
+                </p>
+            </div>
+        </li>
+    </ul>
+<!--
     <ul class="news__list">
         <li class="news__item fade-in">
             <div class="sp__news__header">
@@ -360,6 +390,7 @@
             </svg>
         </div>
     </button>
+-->
 </section>
 <section id="company" class="company">
     <h3 class="section__title company__title sp__only fade-in">
@@ -370,7 +401,7 @@
         <div class="title__ja">会社概要</div>
     </h3>
     <div class="company__img__container fade-in">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.83305669612!2d139.76451061064301!3d35.681112429867476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfbd89f700b%3A0x277c49ba34ed38!2z5p2x5Lqs6aeF!5e0!3m2!1sja!2sjp!4v1733560722233!5m2!1sja!2sjp" class="map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d810.4868057794597!2d139.6905136853457!3d35.653671917265314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b54d7a74987%3A0x770cdf097b3d840e!2z44CSMTUzLTAwNDIg5p2x5Lqs6YO955uu6buS5Yy66Z2S6JGJ5Y-w77yU5LiB55uu77yX4oiS77yRIOODl-ODqeODiOODvOODtOOCp-ODvOODqw!5e0!3m2!1sja!2sjp!4v1734677045164!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="company__content">
         <h3 class="section__title company__title pc__only fade-in">
@@ -387,27 +418,29 @@
             </li>
             <li class="company__item">
                 <p class="company__item__title">所在地</p>
-                <p class="company__item__content">〒100-0001<br>千代田区丸の内１丁目</p>
+                <p class="company__item__content">〒153-0042 東京都目黒区青葉台４丁目７−１</p>
             </li>
             <li class="company__item">
                 <p class="company__item__title">設立</p>
-                <p class="company__item__content">2025年●月△日</p>
+                <p class="company__item__content">2024年12月26日</p>
             </li>
             <li class="company__item">
                 <p class="company__item__title">代表取締役</p>
-                <p class="company__item__content">田中 太郎</p>
+                <p class="company__item__content">高村 孝一郎</p>
             </li>
             <li class="company__item">
                 <p class="company__item__title">事業内容</p>
-                <p class="company__item__content">基幹システム構築におけるソフトウェア開発<br>業務プロダクトの開発、販売</p>
+                <p class="company__item__content">ソフトウェア開発および関連する一切の事業</p>
             </li>
+		<!--
             <li class="company__item">
                 <p class="company__item__title">お問合せ先</p>
                 <p class="company__item__content">****@fplus.co.jp</p>
-            </li>
+            </li> -->
         </ul>
     </div>
 </section>
+	<!--
 <section id="contact" class="contact">
     <h3 class="section__title contact__title fade-in">
         <div class="title__en">
@@ -494,6 +527,7 @@
         </form>
     </div>
 </section>
+	-->
 <footer id="footer" class="footer">
     <div class="footer__content">
         <a class="footer__logo logo" href="#"><img src="./img/logo.png" class="logo__img footer__logo__img" alt="Fplus"></a>
