--- a/fplus_html/index.html
+++ b/fplus_html/index.html
@@ -92,11 +92,11 @@
 	</div>
 </header>
 <section id="loading" class="loading">
-    <video src="./img/loading__animation.mp4" autoplay muted playsinline class="bg__animation" data-target="loading" style="display: none;"></video>
+    <video src="./img/loading__animation.mp4" autoplay muted playsinline webkit-playsinline class="bg__animation" data-target="loading" style="display: none;"></video>
     <img src="./img/mv__img.png" alt=" " class="bg__img fadeup loading__fadeup">
 </section>
 <section id="bg" class="bg">
-    <video src="./img/mv__animation.mp4" autoplay muted loop playsinline class="bg__animation" data-target="background" style="display: none;"></video>
+    <video src="./img/mv__animation.mp4" autoplay muted loop playsinline webkit-playsinline class="bg__animation" data-target="background" style="display: none;"></video>
     <img src="./img/mv__img.png" alt=" " class="bg__img">
 </section>
 <section id="mv" class="mv">
@@ -147,7 +147,7 @@
             </p>
         </div>
         <div class="mission__container--right fade-in">
-            <video  autoplay loop muted playsinline class="mission__animation">
+            <video  autoplay loop muted playsinline webkit-playsinline class="mission__animation">
                 <!-- Safari用 -->
                 <source src="./img/fplus-mission.mov" type="video/quicktime">
                 <!-- Chrome/Firefox用 -->
