--- a/fplus_html/index.html
+++ b/fplus_html/index.html
@@ -233,8 +233,8 @@
             <div class="title__ja">製品紹介</div>
         </h3>
         <p class="product__header__text fade-in">
-            アパレル業界の課題を解決するためのアプリケーションを提供。<br>
-            売上予測から生産管理まで、業務効率化と可視化を実現し、課題解決をサポートします。
+            クリエイティブの課題を解決するためのアプリケーションを提供。<br>
+            企業ニーズや潜在的な課題を発見し、テクノロジーで解決をサポートします。
         </p>
     </div>
     <ul class="product__list">
@@ -266,7 +266,7 @@
             <img src="./img/product2.png" alt="アプリケーションモックアップ画像" class="product__img">
             <p class="product__description">
                 アパレルの生産工程をシステム化し、各工程の進捗や状況を可視化・管理します。
-                アナログなやり取りをシステム化することで、現場の負担軽減に貢献するアプリケーションです。
+                生産管理者のコストを削減し、人件費削減に貢献するアプリケーションです。
             </p>
             <!-- <button class="btn__viewall btn__product btn fade-in" type="button" onclick="location.href='#'">
                 <span class="btn__text">すべて見る</span>
@@ -313,7 +313,7 @@
                 <p class="news__item__category pc__only">お知らせ</p>
                 <h5 class="news__item__title">年末年始休業のお知らせ</h5>
                 <p class="news__text">
-                    12/27〜1/5までは年末年始休業となります。予めご了承ください。
+                    12/28〜1/5までは年末年始休業となります。予めご了承ください。
                 </p>
             </div>
         </li>
@@ -414,11 +414,11 @@
         <ul class="company__list fade-in">
             <li class="company__item">
                 <p class="company__item__title">会社名</p>
-                <p class="company__item__content">株式会社Fplus</p>
+                <p class="company__item__content">株式会社f plus</p>
             </li>
             <li class="company__item">
                 <p class="company__item__title">所在地</p>
-                <p class="company__item__content">〒153-0042 東京都目黒区青葉台４丁目７−１</p>
+                <p class="company__item__content">〒153-0042 東京都目黒区青葉台4丁目7-1</p>
             </li>
             <li class="company__item">
                 <p class="company__item__title">設立</p>
