--- a/fplus_html/index.html
+++ b/fplus_html/index.html
@@ -241,7 +241,7 @@
         <li class="product__item fade-in">
             <img src="./img/product1.png" alt="アプリケーションモックアップ画像" class="product__img">
             <p class="product__description">
-                ZOZOTOWNから取得した売上データを分析し、売上予測や在庫補充管理を行います。
+                ECサイトから取得した売上データを分析し、売上予測や在庫補充管理を行います。
                 販売戦略の最適化を実現するWebアプリケーションです。
             </p>
             <!-- <button class="btn__viewall btn__product btn fade-in" type="button" onclick="location.href='#'">
